--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=9999
-MONGODB_URI=mongodb+srv://jmwiedeback:codingdojo1@cluster1.zi1w8go.mongodb.net/
+MONGODB_URI=mongodb+srv://mahnoorazhar70:codingwithnoor@mahnoorcluster.tzuep24.mongodb.net
 JWT_SECRET="nsdjkfnsdhfuifdj"
